--- a/client/src/componentes/Home/header.css
+++ b/client/src/componentes/Home/header.css
@@ -1,3 +1,20 @@
+.header{
+    display: flex;
+    width: 100%;
+    /* border: 1px red solid */
+    height:90vh ;
+    justify-content: space-around;
+}
+
+.headerContent{
+    /* border: 1px red solid; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.headerText{
+    margin-bottom: 140px;
+}
 .registrationButton{
     padding: 5px 7px;
     background-color: #F0BF00;
