--- a/client/src/componentes/Home/header.css
+++ b/client/src/componentes/Home/header.css
@@ -15,9 +15,6 @@
 .headerText{
     margin-bottom: 140px;
 }
-.registrationButton{
-    padding: 5px 7px;
-    background-color: #F0BF00;
-    border-radius: 7.5px;
-    cursor: pointer;
+.headerText a{
+    text-decoration: none;
 }
